<resources>
    <string name="app_name">Moody</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_typing__test">Typing_Test</string>
    <string name="current_typing_speed">Current Typing Speed</string>
    <string name="input_your_text_here_at_least_30_characters">Input your text here(At least 30 characters)</string>
    <string name="submit">Submit</string>
    <string name="start_a_test">Start A Test</string>
    <string name="view_statistics">View Statistics</string>
    <string name="moody">MOODY</string>
    <string name="congratulations">Congratulations!</string>
    <string name="total_time">Total Time:</string>
    <string name="average_speed">Average Speed:</string>
    <string name="text_length">Text Length:</string>
</resources>
