<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/people">

    <com.github.rubensousa.raiflatbutton.RaiflatButton
        android:id="@+id/button1"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/gray"
        android:text="@string/start_a_test"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.github.rubensousa.raiflatbutton.RaiflatButton
        android:id="@+id/button2"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="143dp"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/gray"
        android:text="@string/view_statistics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/moody"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>